--- a/app/views/users/_formSignUp.html.erb
+++ b/app/views/users/_formSignUp.html.erb
@@ -6,16 +6,16 @@
         <%= render 'shared/error_messagers' %>
 
         <%= f.label :name %>
-        <%= f.text_field :name, class: 'form-control' %>
+        <%= f.text_field :name, class: 'form-control',required:true %>
 
         <%= f.label :email %>
-        <%= f.text_field :email, class: 'form-control' %>
+        <%= f.text_field :email, class: 'form-control',required:true %>
         
         <%= f.label :password %>
-        <%= f.password_field :password, class: 'form-control' %>
+        <%= f.password_field :password, class: 'form-control',required:true %>
         
         <%= f.label :password_confirmation, "Confirmation" %>
-        <%= f.password_field :password_confirmation, class: 'form-control' %>
+        <%= f.password_field :password_confirmation, class: 'form-control',required:true %>
         
         <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
