--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -14,7 +14,7 @@ $gray-medium-light: #eaeaea;
   float: left;
   width: 100%;
   margin-top: 45px;
-  @include box_sizing;
+  @include box_sizing(border-box);
 }
 
 
@@ -127,4 +127,13 @@ input {
 #session_remember_me {
   width: auto;
   margin-left: 0;
+}
+.users {
+  list-style: none;
+  margin: 0;
+}
+.users  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $gray-lighter;
 }
