--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,8 @@
         <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
             <ul class="nav navbar-nav">
                     <li><%= link_to "Home", root_path %></li>
+                    <li><%= link_to "Product", products_path %></li>
+                    <li><%= link_to "Category", categories_path %></li>
                     <li><%= link_to "Help", help_path %></li>
 
                     <% if logged_in? %>
