--- a/app/views/layouts/_header_admin.html.erb
+++ b/app/views/layouts/_header_admin.html.erb
@@ -218,7 +218,7 @@
   <li class="dropdown user user-menu">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
      <%= image_tag("user2-160x160.jpg", class: "user-image") %>
-     <span class="hidden-xs">Alexander Pierce</span>
+     <span class="hidden-xs"><%= @current_user.name %></span>
    </a>
    <ul class="dropdown-menu">
     <!-- User image -->
@@ -226,7 +226,7 @@
      <%= image_tag("user2-160x160.jpg", class: "img-circle") %>
 
      <p>
-      Alexander Pierce - Web Developer
+      <%= @current_user.name %>
       <small>Member since Nov. 2012</small>
     </p>
   </li>
