--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for @product,:html => {:multipart => true} do |f| %>
+
+<%= form_for @product, html: { multipart: true } do |f| %>
   <% if product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -30,9 +31,17 @@
     <%= f.label :category %>
     <%= f.text_field :category %>
   </div>
-  <div class="field">
+
+
+    <div class="field">
+    <%= f.label :image %><br>
     <%= f.file_field :image %>
-  </div>
+    </div>
+     <% if f.object.image? %>
+      <%= image_tag f.object.image.thumb.url %>
+      <%= f.label :remove_image %>
+      <%= f.check_box :remove_image %> 
+    <% end %>
 
   <div class="actions">
     <%= f.submit %>
